# ChangeLog for sys-devel/binutils
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.398 2010/07/27 00:07:27 vapier Exp $

*binutils-2.20.51.0.10 (27 Jul 2010)

  27 Jul 2010; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.20.51.0.10.ebuild:
  Version bump #329023 by Arfrever Frehtes Taifersar Arahesis.

  18 Jul 2010; Raúl Porcel <armin76@gentoo.org> binutils-2.20.1-r1.ebuild:
  sh/sparc stable wrt #298571

  11 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  binutils-2.20.1-r1.ebuild:
  Stable on alpha, bug #298571

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  binutils-2.20.1-r1.ebuild:
  ppc64 stable wrt #298571

  27 Jun 2010; <nixnut@gentoo.org> binutils-2.20.1-r1.ebuild:
  ppc stable #298571

  25 Jun 2010; Mike Frysinger <vapier@gentoo.org> binutils-2.20.1-r1.ebuild:
  Mark ia64 stable #298571.

  24 Jun 2010; Jeroen Roovers <jer@gentoo.org> binutils-2.20.1-r1.ebuild:
  Stable for HPPA (bug #298571).

  21 Jun 2010; Markus Meier <maekke@gentoo.org> binutils-2.20.1-r1.ebuild:
  arm stable, bug #298571

  13 Jun 2010; Christoph Mende <angelos@gentoo.org>
  binutils-2.20.1-r1.ebuild:
  Stable on amd64 wrt bug #298571

  08 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  binutils-2.20.1-r1.ebuild:
  x86 stable wrt bug #298571

*binutils-2.20.51.0.9 (28 May 2010)

  28 May 2010; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.20.51.0.9.ebuild:
  Version bump.

*binutils-2.20.1-r1 (09 May 2010)

  09 May 2010; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.20.1-r1.ebuild:
  Add fix from upstream for ld internal error #317549, add fix from upstream
  for dynamic PIEs #311081, and fix patching on mips systems #310279.

*binutils-2.20.51.0.8 (14 Apr 2010)

  14 Apr 2010; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.20.51.0.8.ebuild:
  Version bump.

*binutils-2.20.51.0.7 (11 Apr 2010)

  11 Apr 2010; Mike Frysinger <vapier@gentoo.org>