@@ -28,15 +28,12 @@ DIST binutils-2.20.1-patches-1.1.tar.bz2 14913 RMD160 5a850d8ee3880153f614e9ef65
 DIST binutils-2.20.1.tar.bz2 17501436 RMD160 2ab2de504a85840d1ec227eff50b5f4d2cad581e SHA1 fd2ba806e6f3a55cee453cb25c86991b26a75dee SHA256 228b84722d87e88e7fdd36869e590e649ab523a0800a7d53df906498afe6f6f8
 DIST binutils-2.20.51.0.10-patches-1.0.tar.bz2 7576 RMD160 ae1a487c9c9fdd9abcf2cb098e0c8de8c338ae9f SHA1 8050d48325b677af06924404a19e6b6542791aa7 SHA256 5e17a71cf5b7ac0f1a19baec3f4c304d4dab582bfaf577e157c1d964d87042e0
 DIST binutils-2.20.51.0.10.tar.bz2 16853260 RMD160 960bf68f0e6dc708dc1a22d334fcbe0f14f9c149 SHA1 935e69352c4790ad790a0df0ff9d77ad5cd2bf3f SHA256 e3d0a3c69c7c4a0fbaa149d67c726d590f4fa5849c8085d1d68a3b55fcc1a125
-DIST binutils-2.20.51.0.6-patches-1.0.tar.bz2 7667 RMD160 c97348d243bcdea7a8df2c05baa8e6e20a506c30 SHA1 eb5e85f4f9d94ef82ab6c83bbe9220a869f0e812 SHA256 1cce760f88af72973775a248deb89bcad0e7909158cc4beae8dd9e52d211513b
-DIST binutils-2.20.51.0.6.tar.bz2 16478607 RMD160 c55c7953547a6f37f1029415e8651712ac2707c6 SHA1 4e6ef03e459b96fb2ff59ad5aeee0b342db9ac2d SHA256 f2677ec4c8853dccbd936403ed06bff6999b8a462f71cb022814c4e69bd13560
-DIST binutils-2.20.51.0.8-patches-1.0.tar.bz2 7670 RMD160 266eb3105bd71293935ca467eb87223f67c7b10d SHA1 1d59b0f53c91369260fcd51ac60a7a39dabb4ab6 SHA256 9d22e3b37c902b750b4e3d0d62dfcfc497e6785985a9b0df3213f8beffcf2746
-DIST binutils-2.20.51.0.8.tar.bz2 16767788 RMD160 b3047a18cbe09d439b796b5c4323343e0cb11d8e SHA1 ab793141caa1865484ba7979e5151e4998ae3ae2 SHA256 fb367d36772595a84d2131d06d49a6e90c85ab7ca4500d3c30953d128502c242
+DIST binutils-2.20.51.0.11-patches-1.0.tar.bz2 7571 RMD160 bd4bc199eea18f0a07a62aa70d7767f9f8a676fa SHA1 935d62e000059e25b8f5affef43349d0098b02e9 SHA256 052f6e02146584d6a19b199efe355422dafd9c2592526849eada4e273f5e6f8c
+DIST binutils-2.20.51.0.11.tar.bz2 16922291 RMD160 e23fe6f7164cd09cb47a98140932fa95fa6c7030 SHA1 b1c8710784aa85937f909df445c8725bab402ab6 SHA256 1b0d3a7710df14d546e596ec75665da04713ab9ec74469aade5a658f448a4375
 EBUILD binutils-2.18-r04.1.ebuild 2255 RMD160 7e947a3196ed6c953822eb24edcea638049f719c SHA1 a0a44112d2da795b5c71012d1544b0963386f1d6 SHA256 b071e80af19ce00abff0bde794fa018d686cb0ca8d16b0ef9eab194ef3bb0082
 EBUILD binutils-2.19.1-r01.1.ebuild 1197 RMD160 4cc05fd94727bd881ec49c45fd4d4dd04819db6d SHA1 6901a87d8b4fd86109cc081ed89cbda998686885 SHA256 2aeb7473e9fa525c41602c4b6d25bc3c3d2977e867b2b4e00bbfe0af5adc1fc7
-EBUILD binutils-2.20.1-r1.ebuild 833 RMD160 79dc7e60ce9ad966d1f98f4b3cbb4c7e0641a153 SHA1 444e1499a7fe63faa2317fc7bae9621023d3126b SHA256 82debaff1ac902fb5a34f396e28e1839810d4a6af490a90a56c2d59aee8e4a2c
+EBUILD binutils-2.20.1-r1.ebuild 832 RMD160 921f5625ad418e664f1605b7de7d9405467e4baf SHA1 4dd05088df8578ae541683b8c45939ec371e8eee SHA256 e6561c395380c8e1268f9afa4307668c82aed7093c89dc90eae614fd4f2b9eac
 EBUILD binutils-2.20.51.0.10.ebuild 1877 RMD160 beca7465128a59bd786ba8d46ad5435d9a6d2ad5 SHA1 c31bbebca8080f9c83b4f40038bf81788a6d66dc SHA256 c785a98844fb0ffc487f04e4c9c250693ecc9d6a130bdc58ab7aad76f4b221ba
-EBUILD binutils-2.20.51.0.6.ebuild 1860 RMD160 59aadb18815fdd44154ba38446a3ab828cf63281 SHA1 bf09e1ffa9736d7f50fb715798c58114e8b0e8ee SHA256 792f61b2bf834175fed8a826793ed1746642cc328c892ee4b5f9afac8bdfb4a5
-EBUILD binutils-2.20.51.0.8.ebuild 1860 RMD160 10fb33df56690b59ca60dd856134800c1883fa5f SHA1 ca0d85e173221266800b154280cb74aafb221a69 SHA256 625209bf347789215bb4e413dfcf50b4559df815a390eb15d6a077c3285ada26
-MISC ChangeLog 67687 RMD160 028540c896aa12568d39c93200e09786916a74be SHA1 937e9ca29e8d3130c12b9d3fb76067d251f99ba1 SHA256 9b5c0896ff8cf4b09fe7cc0a6a9702cae115567851477f7eb6aec4286cf74276
+EBUILD binutils-2.20.51.0.11.ebuild 1877 RMD160 47a4510c1e96686b5acb662e87ee9cd42606e409 SHA1 85ff97be3cccb4b04cc4c6c4aeb2147db89523f7 SHA256 9bb9874334698d6c8e23ab6ef008f3f798103917fe54d0735b052f23f08cc5cd
+MISC ChangeLog 67931 RMD160 484e3e942bee3c2bc90b52ffd73134ae36cb5ac0 SHA1 c227678f97b4d2c220af1ed748b31d59e2a4f37a SHA256 f5779b72ab95d4b50eb89b7767f4c82dec1398d5b1a7ca56d28c83fedec3584c
 MISC metadata.xml 386 RMD160 c7d423f8beaf5a89ed58b4438d3090ad38ee6efa SHA1 929a22d4a3a63a181ff80a4d7e6344ac227e6a25 SHA256 58db91727c014c22db0fde315c25cb22c59dc5c15af5d30ee4c01a248500b67c
